--- a/Hostinger/style.css
+++ b/Hostinger/style.css
@@ -376,7 +376,7 @@ header{
 .columna-derecha__imagen {
     width: 880px;
     height: 576px;
-    object-fit: cover; /* Mantiene proporciones si quieres recortar */
+    object-fit: cover;
     border-radius: 12px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.08);
     display: block;
